...
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              Expanded(
                child: Metrica(
                  titulo: Textos.temperatura,
                  valor: l.temperatura!.toStringAsFixed(1),
                  unidad: '°C',
                  semaforo: l.semaforoTemperatura,
                  detalle: l.temperaturaPedida == null
                      ? null
                      : Textos.pedido('${l.temperaturaPedida!.toStringAsFixed(1)} °C'),
                ),
              ),
...
